<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        style="@style/detail_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_post_detail_name" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/detail_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_post_detail_comment" />

    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/detail_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_post_detail_longitude" />

    <TextView
        android:id="@+id/textViewLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/detail_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_post_detail_latitude" />

    <TextView
        android:id="@+id/textViewLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>